# pi-router

./: Cargo.toml  Makefile  README.md  config.json
src/: config.rs  error.rs  main.rs  monitor.rs  sys_stats.rs  watcher.rs
src/api/: mod.rs
src/approval/: firewall.rs  mod.rs  store.rs
src/daemon/: dnsmasq.rs  hostapd.rs  mod.rs  process.rs
src/http_api/: mod.rs
src/network/: forwarding.rs  interface.rs  mod.rs  nat.rs
web/: next.config.ts  package-lock.json  package.json  tailwind.config.js
web/app/: globals.css  layout.tsx  page.tsx
web/app/components/: LayoutShell.tsx  LayoutWrapper.tsx  Sidebar.tsx  Topbar.tsx
web/app/config/: page.tsx
web/app/devices/: page.tsx
web/app/firewall/: page.tsx
web/app/login/: page.tsx
web/app/logs/: page.tsx
web/app/nat/: page.tsx
web/app/terminal/: page.tsx
web/lib/: api.ts
