[package]
name = "pi-router"
version = "0.1.0"
edition = "2021"
authors = ["pi-router"]
description = "A professional Rust WiFi router daemon — routes WAN traffic through a WiFi AP"
readme = "README.md"
license = "GPL-3.0"

[[bin]]
name = "pi-router"
path = "src/main.rs"

[dependencies]
tokio        = { version = "1",   features = ["full"] }
serde        = { version = "1",   features = ["derive"] }
serde_json   = "1"
anyhow       = "1"
thiserror    = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap         = { version = "4",   features = ["derive"] }
libc         = "0.2"
tempfile     = "3"
axum         = { version = "0.7", features = ["macros"] }
tower-http   = { version = "0.5", features = ["cors", "trace"] }
sysinfo = "0.38.3"

[profile.release]
opt-level = 3
lto = true
strip = true
